[package]
name = "piston-button_controller"
version = "0.9.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = ["controller", "button", "piston"]
description = "A Piston library for handling button state and events"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/button_controller.git"
homepage = "https://github.com/PistonDevelopers/button_controller"

[lib]
name = "button_controller"
path = "src/lib.rs"

[dependencies]
vecmath = "1.0.0"
pistoncore-input = "0.25.0"

[dev-dependencies]
piston_window = "0.93.0"
pistoncore-sdl2_window = "0.56.0"
